# krxon

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: krxon.rb
docs/: api-docs.html  architecture.md  codegen.md  contributing.md  distribution.md  endpoints.md  index.html  skill.md
packaging/homebrew/: krxon.rb
packaging/winget/: krxon.installer.yaml  krxon.locale.en-US.yaml  krxon.yaml
sdk/python/: README.md  pyproject.toml
spec/: endpoints.yaml
src/: cli.rs  client.rs  error.rs  main.rs  output.rs  utils.rs
src/codegen/: mod.rs  python.rs  spec.rs  typescript.rs
src/endpoints/: derivatives.rs  etp.rs  index.rs  mod.rs  stock.rs
src/mcp/: mod.rs  server.rs
templates/python/: __init__.py.tera  client.py.tera  types.py.tera
templates/python/endpoints/: __init__.py.tera  category.py.tera
templates/typescript/: README.md.tera  package.json.tera  tsconfig.json.tera
templates/typescript/src/: client.ts.tera  index.ts.tera  types.ts.tera
templates/typescript/src/endpoints/: category.ts.tera
tests/: python_codegen_smoke.rs  typescript_codegen_smoke.rs
