[package]
name = "krxon"
version = "0.1.0"
edition = "2021"
description = "CLI tool for KRX (Korea Exchange) Open API"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tera = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
