[package]
name = "krxon"
version = "0.1.3"
edition = "2021"
rust-version = "1.94.0"
description = "CLI tool for KRX (Korea Exchange) Open API"
license = "MIT"
repository = "https://github.com/seungdols/krxon"
homepage = "https://github.com/seungdols/krxon"
keywords = ["krx", "korea-exchange", "finance", "api", "cli"]
categories = ["command-line-utilities", "finance"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tera = "1"
comfy-table = "7"
chrono = "0.4"

[dev-dependencies]
mockito = "1"
tempfile = "3"
